--- a/src/styling/homepage.css
+++ b/src/styling/homepage.css
@@ -6,7 +6,7 @@ html {
   background-image: url("../images/sunset.jpg");
   background-size: 100% 100%;
   /* opacity: 0.50; */
-  height: 1100px;
+  height: 1800px;
 }
 
 img {
@@ -28,10 +28,12 @@ img {
   margin-right: 400px;
   margin-left: 400px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
 .box {
+  margin-top: 50px;
   background-color: rgba(255, 255, 255, 0.5);
   display: flex;
   width: 240px;
@@ -81,12 +83,50 @@ img {
   justify-content: center;
 }
 
+.logo {
+}
+
 .androidLogo {
   height: 50px;
   width: 50px;
 }
 
+.specialLogo {
+  height: 50px;
+  width: 50px;
+  padding-bottom: 20px;
+}
+
+.iosImage {
+  height: 170px;
+  width: 170px;
+}
+
 .qsLogo {
   height: 50px;
   width: 50px;
+}
+
+.cppImage {
+  height: 140px;
+  width: 240px;
+}
+
+span.longName {
+  display: none;
+}
+
+.box:hover span.shortName {
+  display: none;
+}
+
+.box:hover span.longName {
+  display: block;
+}
+
+.cardLogos {
+  display: flex;
+  padding-top: 22px;
+  padding-bottom: 20px;
+  align-items: center;
 }
