--- a/src/styling/homepage.css
+++ b/src/styling/homepage.css
@@ -83,9 +83,6 @@ img {
   justify-content: center;
 }
 
-.logo {
-}
-
 .androidLogo {
   height: 50px;
   width: 50px;
@@ -129,4 +126,123 @@ span.longName {
   padding-top: 22px;
   padding-bottom: 20px;
   align-items: center;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  .header {
+    background-image: url("../images/mobile_sunset.jpg");
+    background-size: 100% 100%;
+    height: 812px;
+  }
+
+  .description {
+    margin-top: -20px;
+    font-size: 25px;
+    font-weight: lighter;
+    text-align: center;
+  }
+
+  .boxes {
+    margin-right: 0px;
+    margin-left: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    height: 812px;
+    overflow: hidden;
+  }
+
+  .box {
+    margin-top: 50px;
+    background-color: rgba(255, 255, 255, 0.5);
+    display: flex;
+    width: 100px;
+    border-radius: 20px;
+  }
+
+  .image {
+    height: 30px;
+    width: 60px;
+  }
+
+  .title {
+    margin-top: 5px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 700;
+    margin-bottom: 0%;
+  }
+
+  .appdescription {
+    font-size: 6px;
+    text-align: center;
+    margin: 10px;
+  }
+
+  .components {
+    font-size: 4px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .component {
+    text-align: center;
+    margin: 5px;
+    background-color: lightsteelblue;
+    padding: 4px;
+    border-radius: 15px;
+  }
+
+  .logos {
+    display: flex;
+    padding-bottom: 10px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .androidLogo {
+    height: 25px;
+    width: 25px;
+  }
+
+  .specialLogo {
+    height: 25px;
+    width: 25px;
+    padding-bottom: 10px;
+  }
+
+  .iosImage {
+    height: 85px;
+    width: 85px;
+  }
+
+  .qsLogo {
+    height: 25px;
+    width: 25px;
+  }
+
+  .cppImage {
+    height: 40px;
+    width: 60px;
+  }
+
+  span.longName {
+    display: none;
+  }
+
+  .box:hover span.shortName {
+    display: none;
+  }
+
+  .box:hover span.longName {
+    display: block;
+  }
+
+  .cardLogos {
+    display: flex;
+    padding-top: 1px;
+    padding-bottom: 10px;
+    align-items: center;
+  }
 }
