--- a/src/styling/homepage.css
+++ b/src/styling/homepage.css
@@ -129,6 +129,10 @@ span.longName {
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  html {
+    background-color: black;
+  }
+
   .header {
     background-image: url("../images/mobile_sunset.jpg");
     background-size: 100% 100%;
