--- a/src/styling/myWorkStyling.css
+++ b/src/styling/myWorkStyling.css
@@ -129,7 +129,7 @@ span.longName {
     margin-bottom: 0%;
   }
 
-  .header {
+  html {
     background-image: url("../images/mobile_sunset.jpg");
     background-size: 100% 100%;
     height: 812px;
