--- a/src/styling/myWorkStyling.css
+++ b/src/styling/myWorkStyling.css
@@ -119,10 +119,9 @@ span.longName {
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
   html {
-    background-image: url("../images/mobile_sunset.jpg");
-    background-size: 100% 100%;
-    height: 812px;
+    background-image: none;
     background-color: black;
+    height: 812px;
   }
 
   .workTitle {
@@ -130,6 +129,12 @@ span.longName {
     text-align: center;
     font-size: 35px;
     margin-bottom: 0%;
+  }
+
+  .header {
+    background-image: url("../images/mobile_sunset.jpg");
+    background-size: 100% 100%;
+    height: 812px;
   }
 
   .description {
