--- a/src/styling/homepage.css
+++ b/src/styling/homepage.css
@@ -23,3 +23,27 @@ img {
   font-weight: lighter;
   text-align: center;
 }
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  .header {
+    background-image: url("../images/sunset.jpg");
+    background-size: 100% 100%;
+    /* opacity: 0.50; */
+    height: 812px;
+  }
+
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20px;
+    width: 75%;
+  }
+
+  .description {
+    margin-top: -50px;
+    font-size: 60px;
+    font-weight: lighter;
+    text-align: center;
+  }
+}
