--- a/src/styling/myWorkStyling.css
+++ b/src/styling/myWorkStyling.css
@@ -3,8 +3,6 @@ html {
 }
 
 .mywork {
-  background-image: url("../images/sunset.jpg");
-  background-size: 100% 100%;
   height: 1360px;
 }
 
@@ -121,21 +119,18 @@ span.longName {
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
-  html {
-  }
-
   .mywork {
     background-image: url("../images/mobile_sunset.jpg");
     background-size: 100% 100%;
+    height: 812px;
     margin-top: 0%;
   }
 
   .work {
-    margin-top: 15px;
-    font-family: josefin, serif;
-    text-align: center;
-    font-size: 35px;
+    margin-top: 0%;
     margin-bottom: 0%;
+    padding-top: 10px;
+    font-size: 40px;
   }
 
   .description {
@@ -146,6 +141,7 @@ span.longName {
   }
 
   .boxes {
+    margin-top: 0%;
     margin-right: 0px;
     margin-left: 0px;
     display: flex;
