--- a/src/styling/homepage.css
+++ b/src/styling/homepage.css
@@ -2,11 +2,14 @@ html {
   background-color: gray;
 }
 
-.header {
+.home {
   background-image: url("../images/sunset.jpg");
   background-size: 100% 100%;
   /* opacity: 0.50; */
-  height: 1800px;
+  height: 1200px;
+}
+
+.header {
 }
 
 img {
@@ -24,8 +27,84 @@ img {
   text-align: center;
 }
 
+.buttonLocation {
+  padding-top: 300px;
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  display: inline-flex;
+  height: 40px;
+  width: 150px;
+  border: 2px solid #bfc0c0;
+  margin: 20px 20px 20px 20px;
+  color: #bfc0c0;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 0.8em;
+  letter-spacing: 1.5px;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+a {
+  color: #bfc0c0;
+  text-decoration: none;
+  letter-spacing: 1px;
+}
+
+#btn {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+#btn a {
+  position: relative;
+  transition: all 0.45s ease-Out;
+}
+
+#circle {
+  width: 0%;
+  height: 0%;
+  opacity: 0;
+  line-height: 40px;
+  border-radius: 50%;
+  background: #bfc0c0;
+  position: absolute;
+  transition: all 0.5s ease-Out;
+  top: 20px;
+  left: 70px;
+}
+
+#btn:hover #circle {
+  width: 200%;
+  height: 500%;
+  opacity: 1;
+  top: -70px;
+  left: -70px;
+}
+
+#btn:hover a {
+  color: #2d3142;
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+}
+
+.social {
+  height: 60px;
+  width: 60px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
-  .header {
+  .home {
     background-image: url("../images/sunset.jpg");
     background-size: 100% 100%;
     /* opacity: 0.50; */
